# axionvera-network

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  TEST_FRAMEWORK_CONFIG.md  contract-lifecycle.md  package.json  test-config.yml
.github/workflows/: e2e-tests.yml
contracts/accounting/: Cargo.toml
contracts/accounting/src/: lib.rs
contracts/admin/src/: lib.rs
contracts/assets/: Cargo.toml
contracts/auth/: Cargo.toml
contracts/auth/src/: delegation.rs  lib.rs
contracts/capabilities/: Cargo.toml
contracts/capabilities/src/: lib.rs
contracts/config/: Cargo.toml
contracts/context/: Cargo.toml
contracts/context/src/: lib.rs  test.rs
contracts/context/test_snapshots/test/: creates_top_level_context.1.json  events_emitted_through_contract.1.json  original_caller_immutable_across_nesting.1.json  push_beyond_max_depth_returns_error.1.json  push_increments_depth.1.json  push_preserves_plan_metadata.1.json  validates_consistent_context.1.json  with_operation_sets_metadata.1.json
contracts/core/: Cargo.toml
contracts/core/src/: lib.rs
contracts/events/: Cargo.toml
contracts/events/src/: lib.rs
contracts/features/: Cargo.toml
contracts/features/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/fees/: Cargo.toml
contracts/fees/src/: lib.rs  tests.rs
contracts/fees/test_snapshots/tests/: records_fee_collection_and_updates_accounting.1.json
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: lib.rs
contracts/lifecycle/: Cargo.toml
contracts/lifecycle/src/: lib.rs
contracts/metrics/: Cargo.toml
contracts/metrics/src/: lib.rs  test.rs
contracts/metrics/test_snapshots/test/: test_metrics_aggregation.1.json  test_metrics_event_emission.1.json
contracts/monitoring/: Cargo.toml
contracts/orchestrator/: Cargo.toml
contracts/pipeline/: Cargo.toml  README.md
contracts/pipeline/src/: lib.rs  test.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/registry/test_snapshots/test/: test_register_and_list.1.json  test_set_status.1.json
contracts/replay/: Cargo.toml
contracts/replay/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/risk/: Cargo.toml
contracts/risk/src/: lib.rs
contracts/scheduler/: Cargo.toml
contracts/scheduler/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/security/: Cargo.toml
contracts/security/src/: lib.rs  test.rs
contracts/snapshots/: Cargo.toml
contracts/snapshots/src/: lib.rs  test.rs
contracts/snapshots/test_snapshots/test/tests/: test_snapshot_history.1.json  test_snapshot_interval_enforcement.1.json  test_take_snapshot_basic.1.json
contracts/state/: Cargo.toml
contracts/storage/: Cargo.toml
contracts/storage/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs  test.rs
contracts/upgrades/: Cargo.toml
contracts/upgrades/src/: compat.rs  lib.rs  report.rs  validator.rs
contracts/validator/: Cargo.toml
contracts/validator/src/: lib.rs  test.rs
contracts/validator/test_snapshots/test/: report_detects_inconsistencies.1.json  rule_names_are_present_in_report.1.json
contracts/vault-contract/: Cargo.toml  MULTI_ASSET_IMPLEMENTATION.md
contracts/vault-contract-v2/: Cargo.toml
contracts/vault-contract/src/: cross_contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/vault-contract/test_snapshots/test/: test_add_asset.1.json  test_admin_can_update_lock_duration_models.1.json  test_asset_reward_claiming.1.json  test_asset_reward_distribution.1.json  test_deposit_event_indexing.1.json  test_event_topic_standard.1.json  test_event_version_field.1.json  test_independent_asset_tracking.1.json  test_initialization_is_one_time.1.json  test_initialize_requires_admin_auth.1.json  test_lock_multiplier_changes_reward_split.1.json  test_lock_rejects_invalid_duration.1.json  test_locked_positions_unlock_after_expiration.1.json  test_multiple_asset_deposits.1.json  test_multiple_asset_withdrawals.1.json  test_pause_unpause_events.1.json  test_unsupported_asset_fails.1.json  test_vesting.1.json
docs/: EVENTS.md  TREASURY_MANAGEMENT.md
docs/architecture/: dependency-graph.md  dependency-report.md  upgradeability-framework.md
docs/security/: protocol-hardening-review.md
network-node/: Cargo.toml
network-node/src/: aws_kms_signer.rs  aws_kms_signer_tests.rs  config.rs  consensus.rs  crypto.rs  database.rs  enhanced_server.rs  horizon_client.rs  indexer.rs  lib.rs  main.rs  memory_profiling.rs  p2p.rs  rate_limiter.rs  service_registry.rs  signing.rs  signing_tests.rs  soroban_service.rs  stellar_service.rs  telemetry.rs
network-node/src/grpc/: gateway_service.rs  health_service.rs  mod.rs  network_service.rs  p2p_service.rs  server.rs  service_registry_service.rs  vault_service.rs
proto/: network.proto
scripts/: analyze-dependencies.ts
tests/architecture/: dependency.test.ts
tests/auth/: Cargo.toml
tests/auth/src/: lib.rs
tests/capabilities/: Cargo.toml
tests/capabilities/tests/: capability_discovery.rs
tests/e2e/: README.md
tests/e2e/fixtures/: types.ts
tests/e2e/utils/: commands.ts  core.ts  error_handling.ts  setup.ts  state.ts
tests/e2e/workflows/: core.ts  governance.ts  rewards.ts
tests/events/: event_standards.test.ts
tests/integration/: grpc.test.ts  registry.test.ts  service-discovery.test.ts  vault-flows.test.ts
tests/integration/fixtures/: protocol.ts
tests/integration/protocol/: cross-contract-vault.test.ts  governance-parameter.test.ts  multi-asset.test.ts
tests/integration/scenarios/: failure.test.ts
tests/invariants/: Cargo.toml
tests/invariants/src/: lib.rs
tests/invariants/test_snapshots/: accounting_invariant_pass.1.json
tests/invariants/tests/: protocol_invariants.rs
tests/risk/: Cargo.toml
tests/risk/src/: lib.rs
tests/risk/test_snapshots/: test_vault_asset_enforces_risk_limits.1.json  test_vault_enforces_risk_limits.1.json
tests/security/: Cargo.toml  emergency_flow_test.rs
tests/state/: state_machine.test.ts
(+7 files in other folders)
