[workspace]
resolver = "2"
members = [
  "contracts/vault-contract",
  "contracts/vault-contract-v2",
  "contracts/events",
  "contracts/core",
  "contracts/interfaces",
  "network-node", "contracts/lifecycle",
]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
