[workspace]
resolver = "2"
members = [
  "contracts/auth",
  "contracts/vault-contract",
  "contracts/vault-contract-v2",
  "contracts/events",
  "contracts/accounting",
  "contracts/core",
  "contracts/interfaces",
  "contracts/orchestrator",
  "contracts/risk",
  "network-node",
  "tests/security",
  "tests/risk",
]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
