[workspace]
members = [
  "contracts/auth",
  "contracts/vault-contract",
  "contracts/vault-contract-v2",
  "contracts/events",
  "contracts/accounting",
  "contracts/core",
  "contracts/features",
  "contracts/interfaces",
  "contracts/integrations",
  "contracts/orchestrator",
  "contracts/rewards",
  "contracts/resources",
  "contracts/state",
  "contracts/storage",
  "contracts/validator",
  "network-node",
  "tests/security", "contracts/admin",
  "tests/auth",
  "tests/security",
  "tests/risk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
soroban-sdk = "22.0.0"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
