[package]
name = "axionvera-accounting"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
soroban-sdk = "22.0.1111"
axionvera-events = { path = "../events" }

[dev-dependencies]
soroban-sdk = { version = "22.0.1111", features = ["testutils"] }
