[package]
name = "axionvera-orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.1111"
axionvera-events = { path = "../events" }
axionvera-interfaces = { path = "../interfaces" }

[dev-dependencies]
soroban-sdk = { version = "22.0.1111", features = ["testutils"] }
