[package]
name = "axionvera-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.111"
axionvera-events = { path = "../events" }
axionvera-interfaces = { path = "../interfaces" }

[dev-dependencies]
soroban-sdk = { version = "22.0.111", features = ["testutils"] }
