[package]
name = "axionvera-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
soroban-sdk = "22.0.111"
axionvera-events = { path = "../events" }
axionvera-interfaces = { path = "../interfaces" }
axionvera-state = { path = "../state" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
axionvera-state = { path = "../state" }
