[package]
name = "axionvera-invariant-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
axionvera-validator = { path = "../../contracts/validator" }
axionvera-state = { path = "../../contracts/state" }
axionvera-storage = { path = "../../contracts/storage" }
axionvera-core = { path = "../../contracts/core" }
axionvera-accounting = { path = "../../contracts/accounting" }
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
